Set icon, theme, name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Decision</string>
+    <string name="app_name" translatable="false">47 Days</string>
     <string name="englishLanguageButton" translatable="false">ENGLISH</string>
     <string name="russianLanguageButton" translatable="false">РУССКИЙ</string>
     <string name="ukrainianLanguageButton" translatable="false">УКРАЇНСЬКА</string>
