--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -6,7 +6,7 @@
     <string name="endGameText">КІНЕЦЬ</string>
     <string name="restartButton">Розпочати заново</string>
     <string name="proposeToRestart">Спробуйте відкрити для себе іншу кінцівку!</string>
-    <string name="info_about_tap">[ Завжди натискайте щоб продовжити ]</string>
+    <string name="info_about_tap">Завжди натискайте на текст щоб продовжити</string>
     <string name="disclaimer1">Увага!</string>
     <string name="disclaimer2">Кожен ваш вибір впливає на розвиток сюжету.</string>
     <string name="disclaimer3">Робіть свій вибір з розумом!</string>
